# protogue

./: Cargo.toml  README.md
assets/: creatures.json  floors.json  objects.json  walls.json
src/: game.rs  interface.rs  location.rs  main.rs  map.rs  vector.rs
src/components/: barrier.rs  collision.rs  description.rs  direction.rs  displacement.rs  effects.rs  equipment.rs  glyph.rs  illumination.rs  light.rs  memory.rs  mod.rs  opaque.rs  position.rs  spawn.rs  storage.rs  tile.rs  velocity.rs  weight.rs
src/components/actions/: grab.rs  mod.rs  throw.rs
src/components/meta/: camera_focus.rs  intention.rs  mod.rs
src/entities/: creature.rs  floor.rs  item.rs  mod.rs  wall.rs
src/object_derive/: Cargo.toml
src/object_derive/src/: lib.rs
src/systems/: displacement.rs  grab.rs  mod.rs  spawn.rs  throw.rs  velocity.rs
